--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ locale: en-US;th
 title: "TK's Life is So Simple"
 description: "TK's Life is So Simple"
 baseurl: ""
-url: "https://mmistakes.github.io"
+url: "https://tktknaparat.github.io/"
 logo: "/images/so-simple-site-logo.png"
 date_format: "%B %-d, %Y"
 read_time: true
